# polymarket-gpt-predictor

./: Cargo.toml  README.md
docs/: 01-strategy-design.md  02-bear-research.md  02-pseudocode-v1.py
scripts/: backtest.py  backtest_30d.py  backtest_5m.py  fetch_5m.py
src/: bear_trader.rs  main.rs
src/analysis/: bear_research.rs  mod.rs
src/bear/: trader.rs
src/binance/: feed.rs  mod.rs  obi.rs
src/clob/: clob.rs  mod.rs
src/config/: config.rs
src/db/: mod.rs
src/decision/: candle.rs  decision.rs  diagnostics.rs  features.rs  mod.rs  state.rs
src/paper/: tracker.rs
src/types/: models.rs
